# forest-fire

./: .gitignore  CLAUDE.md  pyproject.toml
docs/: fire_susceptibility_guide.md  implementation.md  references.bib
notebooks/: eda.ipynb  model_training.ipynb  model_validation.ipynb  presentation_visuals.ipynb  pytorch_train.ipynb
outputs/figures/: metrics.json
outputs/models/: pytorch_mlp_preprocess.joblib  sklearn_models.joblib
publication/: paper.docx
scripts/: config.py  download_data.py  gee_extractor.py
